--- a/static/index.html
+++ b/static/index.html
@@ -5,6 +5,7 @@
 	<title>HCI Project Portfolio</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link href="css/introHCI.css" rel="stylesheet">
 	<!-- this is a comment in HTML -->
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -19,8 +20,8 @@
 		<!-- h1 through h6 are headers. The higher the number, the smaller the header -->
 		<!-- p means paragraph -->
 		<div>
-			<h1>Scott Klemmer</h1>
-			<p>human-computer interaction &middot; social computing &middot; crowdsourcing</p>
+			<h1>Riley Froehlich</h1>
+			<p>Cognitive Science &middot; Neurocomputations and Machine Learning &middot; Minor in Computer Science</p>
 		</div>
 
 
@@ -28,52 +29,22 @@
 		<!-- divs are invisible structuring elements that stack vertically by default. Use them to organize your code -->
 		<!-- img tags are images. Lorem Pixel will deliver random images; handy! -->
 		<!-- a are anchors, also known as hyperlinks. Use the href attribute to tell the browser where to go when the user clicks -->
-		<div id="project1">
-			<a href="project.html">
-				<img src="images/lorempixel.people.1.jpeg" alt="Lorem Pixel image">
-				<p>Waiting in Line</p>
+		<div class='project' id="project1">
+			<a href="https://github.com/StevenSiddall/UCSDRL_Overlay">
+				<img class="thmubnail" src="images/i8UJf6JX-iCrSJxw2jvK0dyb9iS__6DxLouNMxNAARA.jpg" alt="Lorem Pixel image">
+				<p class="contact-info">Rocket League Dynamic OBS Overlay with Friends</p>
 			</a>
 		</div>
-		<div id="project2">
-			<a href="project.html">
-				<img src="images/lorempixel.city.1.jpeg" alt="Lorem Pixel image">
-				<p>Needfinding</p>
+		<div class='project' id="project2">
+			<a href="https://github.com/rileyfroehlich/senate">
+				<img class="thumbnail" src="images\capitol-smoke-rt-ps-210106_1609971925753_hpMain_16x9_992.jpg" alt="Lorem Pixel image">
+				<p class="contact-info">Senate Predictions for 2020 (Last Run on 10/03/20 result: 51-49 Dem)</p>
 			</a>
 		</div>
-		<div id="project3">
-			<a href="project.html">
-				<img src="images/lorempixel.technics.1.jpeg" alt="Lorem Pixel image">
-				<p>Prototyping</p>
-			</a>
-		</div>
-		<div id="project4">
-			<a href="project.html">
-				<img src="images/lorempixel.abstract.1.jpeg" alt="Lorem Pixel image">
-				<p>Heuristic Evaluation</p>
-			</a>
-		</div>
-		<div id="project5">
-			<a href="project.html">
-				<img src="images/lorempixel.abstract.8.jpeg" alt="Lorem Pixel image">
-				<p>Visualization</p>
-			</a>
-		</div>
-		<div id="project6">
-			<a href="project.html">
-				<img src="images/lorempixel.people.2.jpeg" alt="Lorem Pixel image">
-				<p>Social design</p>
-			</a>
-		</div>
-		<div id="project7">
-			<a href="project.html">
-				<img src="images/lorempixel.technics.2.jpeg" alt="Lorem Pixel image">
-				<p>Gestural interaction</p>
-			</a>
-		</div>
-		<div id="project8">
-			<a href="project.html">
-				<img src="images/lorempixel.city.2.jpeg" alt="Lorem Pixel image">
-				<p>Design tools</p>
+		<div class='project' id="project3">
+			<a href="https://github.com/rileyfroehlich/COGS-108-Final-Project">
+				<img class="thumbnail" src="images/queens-crash.jpg" alt="Lorem Pixel image">
+				<p class="contact-info">COGS108 Final Project: Mapping Collisions</p>
 			</a>
 		</div>
 	</div>
